custom activities table overflow bug

--- a/app/assets/stylesheets/custom_activities.scss
+++ b/app/assets/stylesheets/custom_activities.scss
@@ -57,8 +57,16 @@ $dangerRed: #891515;
           margin: 0 auto;
           width: 100%;
           top: 7%;
-          /*overflow: scroll;*/
-          /*margin-top: -156px;*/
+
+          thead tr th {
+            font-size: 19px;
+            font-weight: bold;
+          }
+
+          tbody tr td {
+            font-family: 'Open Sans Condensed', sans-serif;
+            font-size: 16px;
+          }
 
           .del-btn {
             color: white;
@@ -72,8 +80,6 @@ $dangerRed: #891515;
             opacity: .8;
           }        
         }
-
-
       }
     }
 
